Fix minor display/spacing issue

--- a/develop/_partials/_misc.scss
+++ b/develop/_partials/_misc.scss
@@ -32,7 +32,6 @@
 	.sm-content-footer & {
 		display: block;
 		visibility: hidden;
-		height: 0;
 	}
 }
 
